testsuite/tests/parse-errors/source_no_alias.ml
(* TEST
   * toplevel
*)

SELECT x FROM f x;;

SELECT x FROM A.x, [1;2;3];;
